-- added material module - angular ui components. working on using ui component by both of the modules: admin and common - the problem is that admin is lazy loaded

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
     <!--     Fonts and icons     -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,300,700' rel='stylesheet' type='text/css'>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Angular material -->
+    <!-- TODO: Change angular theme import -->
+    <link href="node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
