--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <title>Louis XVI</title>
     <base href="/">
 
+    <link rel="stylesheet" type="text/css" href="reset.css">
+
     <link rel="icon" type="image/png" href="assets/img/favicon.ico">
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/apple-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
